--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=${DB_USERNAME:dbeaver}
+spring.datasource.password=${DB_PASSWORD:dbeaver}
+# replace localhost with the database host, 3306 with port number, library
+# with the database name you use
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3307}/${DB_NAME:dev}
+# If you want to see the SQL queries executed by the framework, uncomment the
+# next line:
+#spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=${DDL:create}
+
 spring.application.name=bachelor-access-control-backend
+jwt_secret=${JWT_TOKEN:WouldAWoodchuckChuckIfARoundhouseKick}
+
+server.port=${PORT:8080}
+
+cors.allowedOrigins=${CORS_ORIGINS:https://access-control.flightfinder.space}
