--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>BachelorAccessControlBackend</finalName>
     </build>
 
 </project>
