--- a/.github/workflows/mavenbuild.yaml
+++ b/.github/workflows/mavenbuild.yaml
@@ -49,6 +49,7 @@ jobs:
           DB_HOST: localhost
           DB_PORT: 3306
           DB_NAME: dev
+          SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
 
 
       - name: Set unique image tag
