--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,9 @@ jwt_secret=${JWT_TOKEN:WouldAWoodchuckChuckIfARoundhouseKick}
 
 server.port=${PORT:8080}
 
-cors.allowedOrigins=${CORS_ORIGINS:https://access-control.flightfinder.space}
+cors.allowedOrigins=${CORS_ORIGINS:https://admin.flightfinder.space}
+
+sendgrid.api.key=${SENDGRID_API_KEY}
+sendgrid.template.reset-password=d-1064679ee0e448b29bbbab4d21009a3c
+sendgrid.template.invite-admin=d-5741e5b58cf04ddfa2c621d46aa31b1d
+frontend.base.url=${FRONTEND_BASE_URL:https://admin.flightfinder.space}
