--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,11 @@
 services:
-  #  app:
-  #    build:
-  #      context: .
-  #      dockerfile: Dockerfile.dev
-  #    ports:
-  #      - "8080:8080"
-  #    depends_on:
-  #      - db
-  #    environment:
-  #      DB_PORT: 3306
-  #    networks:
-  #      - backend
-
   db:
     image: mysql:latest
     environment:
       MYSQL_ROOT_PASSWORD: _9rGfw6nM-Cbv_Twnywx
       MYSQL_DATABASE: dev
-      MYSQL_USER: dbeaver
-      MYSQL_PASSWORD: dbeaver
+      MYSQL_USER: devuser
+      MYSQL_PASSWORD: devpass123
     ports:
       - "3307:3306"
     volumes:
