--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DB_USERNAME:dbeaver}
-spring.datasource.password=${DB_PASSWORD:dbeaver}
+spring.datasource.username=${DB_USERNAME:devuser}
+spring.datasource.password=${DB_PASSWORD:devpass123}
 # replace localhost with the database host, 3306 with port number, library
 # with the database name you use
 spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3307}/${DB_NAME:dev}
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=${DDL:create}
 spring.application.name=bachelor-access-control-backend
 jwt_secret=${JWT_TOKEN:WouldAWoodchuckChuckIfARoundhouseKick}
 
-server.port=${PORT:8080}
+server.port=${PORT:8085}
 
 cors.allowedOrigins=${CORS_ORIGINS:https://admin.flightfinder.space}
 
